--- a/DMSDriver/DMSDriver/Resources/Storyboards/RentingOrder.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/RentingOrder.storyboard
@@ -348,7 +348,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yB4-c8-iCu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-146.40000000000001" y="129.08545727136433"/>
+            <point key="canvasLocation" x="-186" y="123"/>
         </scene>
         <!--Renting Order DetailVC-->
         <scene sceneID="gqx-ok-qIb">
@@ -863,7 +863,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DWM-cP-Jeb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="837.60000000000002" y="122.78860569715144"/>
+            <point key="canvasLocation" x="782" y="123"/>
         </scene>
     </scenes>
 </document>
